--- a/resources/css/v2.css
+++ b/resources/css/v2.css
@@ -78,7 +78,7 @@ h3 {
 .column1 {
   background-color: #e5e5e5;
   width: 45%;
-  height: 380px;
+  height: 300px;
   float: left;
   padding: 0 20px;
   margin-top: 1%;
@@ -89,7 +89,7 @@ h3 {
 .column2 {
   background-color: #e5e5e5;
   width: 53%;
-  height: 380px;
+  height: 300px;
   float: left;
   padding: 0 20px;
   margin-top: 1%;
@@ -147,7 +147,7 @@ input:hover {
 button {
   /* font-size: 14px; */
   border-radius: 8px;
-  padding: 6px 6px;
+  padding: 5px 6px;
   -webkit-transition-duration: 0.01s; /* Safari */
   transition-duration: 0.01s;
   cursor: pointer;
@@ -185,9 +185,9 @@ button:hover {
 
 table {
     border-collapse: collapse;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 table, th, td {
-    border: 1px solid black;
+    border: 1px transparent black;
 }
