--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,4 +1,9 @@
-/* © 2018 lottosim.website */
+/* LottoSim https://github.com/jcoffeepot/LottoSim
+Copyright jcoffeepot
+Released under the MIT license
+https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE
+Date 2018-04-09 */
+
 /* CSS */
 
 * {
@@ -104,7 +109,6 @@ h3 {
 h1 {
   margin-top: 25px;
 }
-
 h3 {
   margin-bottom: 18px;
 }
@@ -119,7 +123,6 @@ h3 {
 .vividHeader {
   color: #111111;
 }
-
 .playButtons {
   text-align: center;
 }
@@ -179,7 +182,6 @@ h3 {
 .prizeList {
   width: 110px;
 }
-
 input:hover {
   background-color: #4caf50;
   color: white;
@@ -199,7 +201,6 @@ button {
 #lotto1 {
   background-color: #4caf50;
 }
-
 #lotto1:hover,
 #lotto2:hover,
 #lotto3:hover {
@@ -212,7 +213,6 @@ button:hover {
 #resetThis {
   text-align: center;
 }
-
 .start {
   display: block;
 }
@@ -228,7 +228,6 @@ button:hover {
 }
 .tableTransparent {
   border-collapse: collapse;
-
   font-size: 14px;
   border: 0px transparent gray;
   text-align: left;
