Updates CSS file

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -119,6 +119,8 @@ h3 {
   float: left;
   padding: 0 20px;
   margin: 1%;
+  border-style: inset;
+  border-width: thin;
 }
 .vividHeader {
   color: #111111;
@@ -136,6 +138,8 @@ h3 {
   margin-top: 1%;
   margin-bottom: 1%;
   margin-right: 2%;
+  border-style: inset;
+  border-width: thin;
 }
 .column2 {
   background-color: #e5e5e5;
@@ -145,6 +149,8 @@ h3 {
   padding: 0 20px;
   margin-top: 1%;
   margin-bottom: 1%;
+  border-style: inset;
+  border-width: thin;
 }
 .allPlays {
   height: 335px;
