--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -88,6 +88,7 @@ body {
   margin: 0 auto;
   /* margin-right: 0px; */
   width: 680px;
+  max-width: 98%;
   background-color: white;
   /* background-image: linear-gradient(to bottom, rgba(0,0,255,0.5), rgba(0,0,0,0.5)); */
   background: linear-gradient(
@@ -157,18 +158,6 @@ h3 {
   background-color: #b5b5b5;
   height: 335px;
 }
-@media only screen and (max-width: 680px) {
-  /* For mobile phones: */
-  body {
-    width: 100%;
-  }
-  .column1,
-  .column2,
-  .content {
-    width: 100%;
-    height: auto;
-  }
-}
 #footer,
 .footer {
   font-size: 10px;
@@ -201,9 +190,6 @@ button {
   cursor: pointer;
   background-color: white;
   color: black;
-  /* Add to ensure clickability */
-  min-width: 48px;
-  min-height: 48px;
 }
 #lotto1 {
   background-color: #4caf50;
@@ -237,4 +223,25 @@ button:hover {
   font-size: 14px;
   border: 0px transparent gray;
   text-align: left;
+}
+@media only screen and (max-width: 600px) {
+  /* For mobile phones: */
+  body {
+    width: 98%;
+  }
+  .column1,
+  .column2,
+  .content {
+    width: 100%;
+    height: auto;
+  }
+  button {
+    min-width: 48px;
+    min-height: 48px;
+  }
+  }
+  input {
+    min-width: 48px;
+    min-height: 36px;
+  }
 }
